--- a/NuclearThroneCopy.vcxproj
+++ b/NuclearThroneCopy.vcxproj
@@ -193,6 +193,9 @@
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Video.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
