--- a/NuclearThroneCopy.vcxproj
+++ b/NuclearThroneCopy.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="Character.h" />
     <ClInclude Include="Fish.h" />
     <ClInclude Include="GFXElement.h" />
+    <ClInclude Include="Highscore.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="Logo.h" />
@@ -185,6 +186,7 @@
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Fish.cpp" />
     <ClCompile Include="GFXElement.cpp" />
+    <ClCompile Include="Highscore.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="Logo.cpp" />
