Bullet, Maggot WIP

--- a/NuclearThroneCopy.vcxproj
+++ b/NuclearThroneCopy.vcxproj
@@ -150,15 +150,18 @@
     <ClInclude Include="Audio.h" />
     <ClInclude Include="AudioManager.h" />
     <ClInclude Include="Background.h" />
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Fish.h" />
     <ClInclude Include="GFXElement.h" />
+    <ClInclude Include="GFXElementX.h" />
     <ClInclude Include="Highscore.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="Logo.h" />
+    <ClInclude Include="Maggot.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="ResourceManager.h" />
@@ -181,15 +184,18 @@
     <ClCompile Include="Audio.cpp" />
     <ClCompile Include="AudioManager.cpp" />
     <ClCompile Include="Background.cpp" />
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Fish.cpp" />
     <ClCompile Include="GFXElement.cpp" />
+    <ClCompile Include="GFXElementX.cpp" />
     <ClCompile Include="Highscore.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="Logo.cpp" />
+    <ClCompile Include="Maggot.cpp" />
     <ClCompile Include="MainForDirector.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
