--- a/NuclearThroneCopy.vcxproj.filters
+++ b/NuclearThroneCopy.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClInclude Include="Chest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cactus.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GFXElement.cpp">
@@ -213,6 +216,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Chest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Cactus.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
