--- a/NuclearThroneCopy.vcxproj.filters
+++ b/NuclearThroneCopy.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClInclude Include="HUD.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Bandit.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GFXElement.cpp">
@@ -231,6 +234,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="HUD.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Bandit.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
