--- a/NuclearThroneCopy.vcxproj
+++ b/NuclearThroneCopy.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="Button.h" />
     <ClInclude Include="Cactus.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Canister.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Chest.h" />
     <ClInclude Include="Fish.h" />
@@ -196,6 +197,7 @@
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Cactus.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Canister.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Chest.cpp" />
     <ClCompile Include="Fish.cpp" />
