--- a/NuclearThroneCopy.vcxproj.filters
+++ b/NuclearThroneCopy.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClInclude Include="InputManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Main.h">
+    <ClInclude Include="KeyDefine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Mouse.h">
